feat: add favicon

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p class="profile-p">
             I am front-end developer and i have experience in freelance.<br>
             I have also received an RS School JavaScript/Front-end in 2021.<br>
+            I have also received an RS School REACT in 2022.<br>
             I want to become a middle front-end developer in the next 2 years<br>
-            My next goal is to finish learning React.
         </p>
     </div>
     <hr>
@@ -40,13 +40,13 @@
     <div class="skill">
         <h3 class="contact-h3">PERSONAL SKILLS</h3>
         <div class="skill-field">
-            <p class="contact-p">Team work</p>
+            <p class="contact-p">Responsibility</p>
             <div class="all-dot">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
-                <div class="dot-active"></div>
+                <div class="dot"></div>
             </div>
         </div>
         <div class="skill-field">
@@ -60,35 +60,15 @@
             </div>
         </div>
         <div class="skill-field">
-            <p class="contact-p">Creative</p>
+            <p class="contact-p">Team Player</p>
             <div class="all-dot">
                 <div class="dot"></div>
                 <div class="dot"></div>
                 <div class="dot"></div>
-                <div class="dot-active"></div>
-                <div class="dot-active"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
             </div>
         </div>
-        <!-- <div class="skill-field">
-            <p class="contact-p">Organisation</p>
-            <div class="all-dot">
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot-active"></div>
-            </div>
-        </div>
-        <div class="skill-field">
-            <p class="contact-p">Mangenment</p>
-            <div class="all-dot">
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot-active"></div>
-            </div>
-        </div> -->
     </div>
  </div>
  <div class="content">
@@ -119,8 +99,9 @@
         </div>
         <div class="education-description">
             <h5 class="education-description-h5">The Rolling Scopes School</h5>
-            <p class="description-p">01.08.2021 - 1.10.2021</p>
-            <p>I am currently studying the REACT course in RS School
+            <p class="description-p">04.10.2022 - 13.12.2022</p>
+            <p>I am successfully completed REACT 2022 Q3 (JAVASCRIPT).<br>
+              <a href="https://app.rs.school/certificate/pyaup4kh">Link Certificate</a>
             </p>
         </div>
         <div class="education-description">
@@ -143,7 +124,7 @@
                         <div class="dot"></div>
                         <div class="dot"></div>
                         <div class="dot"></div>
-                        <div class="dot-active"></div>
+                        <div class="dot"></div>
                     </div>
                 </li>
                 <li class="skill-list-item">
@@ -153,7 +134,7 @@
                         <div class="dot"></div>
                         <div class="dot"></div>
                         <div class="dot"></div>
-                        <div class="dot-active"></div>
+                        <div class="dot"></div>
                     </div>
                 </li>
                 <li class="skill-list-item">
@@ -161,9 +142,29 @@
                     <div class="all-dot">
                         <div class="dot"></div>
                         <div class="dot"></div>
-                        <div class="dot-active"></div>
-                        <div class="dot-active"></div>
-                        <div class="dot-active"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                    </div>
+                </li>
+                <li class="skill-list-item">
+                    <p>Redux/Redux Toolkit</p>
+                    <div class="all-dot">
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                    </div>
+                </li>
+                <li class="skill-list-item">
+                    <p>REST API</p>
+                    <div class="all-dot">
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
                     </div>
                 </li>
                 <li class="skill-list-item">
@@ -173,7 +174,7 @@
                         <div class="dot"></div>
                         <div class="dot"></div>
                         <div class="dot"></div>
-                        <div class="dot-active"></div>
+                        <div class="dot"></div>
                     </div>
                 </li>
                 <li class="skill-list-item">
@@ -182,8 +183,8 @@
                         <div class="dot"></div>
                         <div class="dot"></div>
                         <div class="dot"></div>
-                        <div class="dot-active"></div>
-                        <div class="dot-active"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
                     </div>
                 </li>
                 <li class="skill-list-item">
@@ -191,7 +192,7 @@
                     <div class="all-dot">
                         <div class="dot"></div>
                         <div class="dot"></div>
-                        <div class="dot-active"></div>
+                        <div class="dot"></div>
                         <div class="dot-active"></div>
                         <div class="dot-active"></div>
                     </div>
@@ -201,19 +202,19 @@
                     <div class="all-dot">
                         <div class="dot"></div>
                         <div class="dot"></div>
-                        <div class="dot-active"></div>
-                        <div class="dot-active"></div>
-                        <div class="dot-active"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
                     </div>
                 </li>
                 <li class="skill-list-item">
                     <p>SCRUM</p>
                     <div class="all-dot">
                         <div class="dot"></div>
-                        <div class="dot-active"></div>
-                        <div class="dot-active"></div>
-                        <div class="dot-active"></div>
-                        <div class="dot-active"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
+                        <div class="dot"></div>
                     </div>
                 </li>
             </ul>
